--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     driver-class-name: oracle.jdbc.driver.OracleDriver
-    password: tiger
+    password: mogee
     url: jdbc:oracle:thin:@localhost:1521:xe
     username: SYSTEM
   jpa:
